--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,7 @@
 fastapi
-uvicorn[standard]
-python-multipart
+uvicorn
 pillow
 numpy
-opencv-python-headless
-requests
 insightface
-onnxruntime==1.16.1
+onnxruntime==1.23.2
 opencv-python-headless==4.7.0.72
